[package]
name = "actix-fs"
version = "0.1.0"
license = "MPL-2.0"
readme = "README.md"
authors = ["Ian Jun <ian@mykoon.com>"]
description = """
Filesystem API for Actix.
"""
keywords = ["actix", "futures", "fs", "file", "async"]
categories = ["asynchronous", "filesystem"]
edition = "2018"

[dependencies]
futures = "0.1.25"
actix-threadpool = "0.1.1"

[dev-dependencies]
actix-rt = "0.2.2"
tempfile = ">=3.0.5, <3.1"
